# exergyflow

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: CHEATSHEET.md  STEP_BY_STEP.md
examples/: grassmann_example.py
exergyflow/: __init__.py  grassmann_diagram.py  grassmann_geometry.py  grassmann_layout.py  grassmann_render.py  grassmann_types.py
tests/: test_diagram.py
